[package]
name = "quota"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
rand = "0.8.5"
rocket_cors = "0.6.0"
